Sun Apr 21 09:42:05 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/config-win32-common.h: Changed the value of ACE_IOV_MAX to 
	  be 64 rather than 1024.  Thanks to Alain Decamps for motivating
 	  this.

Sat Apr 20 19:57:55 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/Asynch_Pseudo_Task.cpp (stop): Wrap ace_mon in ACE_MT() to eliminate
	  errors on builds which are configured single-threaded.

Fri Apr 19 12:05:42 2002  Ossama Othman  <ossama@uci.edu>

	* examples/Bounded_Packet_Relay/bpr_thread.cpp:
	* examples/Timer_Queue/main_async.cpp:
	* examples/Timer_Queue/main_reactor.cpp:
	* examples/Timer_Queue/main_thread.cpp:

	  The recent "ace/OS.h" inclusion reductions prevented a pragma
	  that disables a MSVC 6 warning about an overly long debugging
	  symbol from occurring.  Explicitly disable that warning in this
	  file to silence the warning.

Fri Apr 19 11:41:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Typed_SV_Message_Queue.h:
        * ace/Strategies_T.h:
        * ace/OS.h:
        * ace/MEM_SAP.h:
        * ace/Asynch_IO.h:
          Doxygen-ized some of the comments

Thu Apr 18 15:58:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_Connector.{h cpp}: Removed static member inet_addr_any_.
          It doesn't work for all compilers (static in a template). Replaced
          default arg for ACE_Asynch_Connector::connect with
          ACE_INET_Addr ((u_short)0) to get the equivalent effect, i.e., let
          the OS pick an unused port.

        * ace/Asynch_Acceptor.cpp (parse_address): Use the ACE_SOCK support
          for dealing with addresses, else the ability to deal with both
          IPv4 and IPv6 is lost.
          Also get rid of a lot of debugging output; use ACE_TRACE instead.

        * tests/Proactor_Test.cpp: Fixed log file name. Corrected formatting
          per ACE guidelines.

        * tests/run_test.lst: Enabled Proactor_Test and Proactor_Timer_Test