@@ -1,3 +1,7 @@
+Sun Apr 21 15:02:52 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
+
+	* ace/TP_Reactor_Test.cpp: Add checks for ACE_AS_THREADS.
+
 Sun Apr 21 09:42:05 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
 
 	* ace/config-win32-common.h: Changed the value of ACE_IOV_MAX to 
